--- a/C.html
+++ b/C.html
@@ -84,7 +84,7 @@
         </ul>
         <hr>
 
-        <div class="copyright"><p>© 2024 <a href="Index.html" id="copyright">GayGo® Official</a></p>  </div>
+        <div class="copyright"><p>© 2024 <a href="index.html" id="copyright">GayGo® Official</a></p>  </div>
 
       </div>
     
