--- a/C.html
+++ b/C.html
@@ -19,7 +19,7 @@
 </head>
 <body>
   <div class="logo">
-<a href="Index.html"><img src="Images/GayGo.png" width="100px"></a>
+<a href="index.html"><img src="Images/GayGo.png" width="100px"></a>
 </div>
 <section id="contact">
   
