--- a/C.html
+++ b/C.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Contact</title>
-  <link href='https://fonts.googleapis.com/css?family=Lato:400,100,300' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Lato:400,100,300' rel='stylesheet' type='C.css'>
 
 <link href="https://fonts.googleapis.com/css?family=Raleway:100,400,700" rel="stylesheet">
 
