--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <div class="sidenav">
             <img src="Images/GayGo.png" width="150px" id="png"><br>
             <a href="https://apnews.com/article/technology-gay-rights-elliot-page-4e2208f50ba038086f55f3021a7af397">Article</a>
-            <a href="Index.html">Intro</a>
-            <a href="Index.html">M/V/P</a>
+            <a href="index.html">Intro</a>
+            <a href="index.html">M/V/P</a>
             <a href="P.html">Content</a>
             <a href="P.html">Services / Programs</a>
             <a href="C.html">Contact</a>
