--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <p>Contact Info:</p>
                 <br>
                 <p>Email: Nickoshwow09@gmail.com</p>
-                <p>Contact Number:X-XXX-XXX-XXX  </p>
+                <p>Contact Number:911-119-911  </p>
                 <br><br><hr>
                 <p>© 2024 <a href="" id="copyright">GayGo® Official</a></p>
                 
